ajout score opponent

--- a/client/src/app/crosswords/crossword/crossword.component.html
+++ b/client/src/app/crosswords/crossword/crossword.component.html
@@ -26,6 +26,7 @@
             <b>Mode: </b>{{selectedMode}}
             <div *ngIf="selectedMode === 'Two Players'">
               <b>Playing against: </b> {{opponnentName}}
+              <b>Points: </b>
             </div>  
           </div>
           <div class="box">
