--- a/client/src/app/crosswords/clues/clues.component.html
+++ b/client/src/app/crosswords/clues/clues.component.html
@@ -10,7 +10,9 @@
   <h2>Horizontal</h2>
   <div class="row" *ngFor="let clue of clues" (click)="onSelect(clue)">
     <div *ngIf="clue.orientation===0">
-      <div class="clue" [class.selected]="this._selectedClue == clue">
+      <div class="clue" 
+        [class.selected]="this._selectedClue == clue"
+        [class.disabled]="clue.isValidated">
 					<span class="index">{{clue.index+1}}</span> {{ clue.desc }}
       </div>
     </div>
