server -> get pour info sur track. get pour liste de tracks.

--- a/client/src/app/race/game-component/game.component.html
+++ b/client/src/app/race/game-component/game.component.html
@@ -5,3 +5,5 @@
         <li>RPM: {{this.renderService.car.rpm | number:'2.0-0'}}</li>
     </ul>
 </div>
+
+<app-track-information></app-track-information>
