--- a/client/src/app/crosswords/clues/clues.component.html
+++ b/client/src/app/crosswords/clues/clues.component.html
@@ -2,10 +2,10 @@
   <h2>Vertical</h2>
   <div class="row" *ngFor="let clue of clues" (click)="onSelect(clue)">
     <div *ngIf="clue.orientation===1">
-      <div class="clue" [class.selected]="this._selectedClue == clue">
-        <span class="index">{{clue.index+1}}</span>
-        <span *ngIf = "cheatMode; else description">{{ clue.name }}</span>
-        <ng-template #description><span>{{clue.desc}}</span></ng-template>
+      <div class="clue" 
+        [class.selected]="this._selectedClue == clue"
+        [class.disabled]="clue.isValidated">
+        <span class="index">{{clue.index+1}}</span> {{ clue.desc }}
       </div>
     </div>
   </div>
