--- a/client/src/app/crosswords/termination/termination.component.dialog.html
+++ b/client/src/app/crosswords/termination/termination.component.dialog.html
@@ -3,3 +3,21 @@
   <h1>You have won!</h1>
   <button (click)="openModeDialog()">Play again</button>
 </div>
+
+<div class="waiting-connection" *ngIf="dialogType() === 1">
+  <h2 class="disconnected">Congratulations!</h2>
+  <h1>You completed the grid</h1>
+  <button (click)="openModeDialog()">Play again</button>
+</div>
+
+<div class="waiting-connection" *ngIf="dialogType() === 2">
+  <h2 class="disconnected">WIN!</h2>
+  <h1>You won the game!</h1>
+  <button (click)="openModeDialog()">Play again</button>
+</div>
+
+<div class="waiting-connection" *ngIf="dialogType() === 3">
+  <h2 class="disconnected">Loss....</h2>
+  <h1>Try again?</h1>
+  <button (click)="openModeDialog()">Play again</button>
+</div>
