--- a/client/src/app/crosswords/termination/termination.component.dialog.html
+++ b/client/src/app/crosswords/termination/termination.component.dialog.html
@@ -2,12 +2,18 @@
   <h2 class="disconnected">Opponent left the game</h2>
   <h1>You have won!</h1>
   <button (click)="openModeDialog()">Play again</button>
+  <a routerLink="">
+    <button (click)="closeDialog()">Main menu</button>
+  </a>
 </div>
 
 <div class="waiting-connection" *ngIf="dialogType() === 1">
   <h2 class="disconnected">Congratulations!</h2>
   <h1>You completed the grid</h1>
   <button (click)="openModeDialog()">Play again</button>
+  <a routerLink="">
+  <button (click)="closeDialog()">Main menu</button>
+  </a>
 </div>
 
 <div class="waiting-connection" *ngIf="dialogType() === 2">
@@ -17,7 +23,7 @@
 </div>
 
 <div class="waiting-connection" *ngIf="dialogType() === 3">
-  <h2 class="disconnected">Loss....</h2>
+  <h2 class="disconnected">You lost...</h2>
   <h1>Try again?</h1>
   <button (click)="openModeDialog()">Play again</button>
 </div>
