--- a/client/src/app/crosswords/termination/termination.component.dialog.html
+++ b/client/src/app/crosswords/termination/termination.component.dialog.html
@@ -20,6 +20,10 @@
   <h2 class="disconnected">WIN!</h2>
   <h1>You won the game!</h1>
   <button (click)="openModeDialog()">Play again</button>
+  <button (click)="openModeDialog()">Play new game</button>
+  <button (click)="openModeDialog()">Main menu</button>
+  
+  
 </div>
 
 <div class="waiting-connection" *ngIf="dialogType() === 3">
