Route et Middleware fonctionnel pour DELETE. Tentative de service http client. Service axios server.

--- a/client/src/app/race/game-component/game.component.html
+++ b/client/src/app/race/game-component/game.component.html
@@ -6,4 +6,7 @@
     </ul>
 </div>
 
-<app-track-information></app-track-information>
+<div>
+  <app-track-information></app-track-information>
+</div>
+
