--- a/client/src/app/crosswords/grid/grid.component.html
+++ b/client/src/app/crosswords/grid/grid.component.html
@@ -3,7 +3,8 @@
     <div class="row" *ngFor="let row of _gridService.grid;">
       <div class="col" *ngFor="let case of row;">
 					<input 
-            [disabled]="case.validated" 
+            [disabled]="case.validated || case.validatedByOther" 
+            [class.validate]="case.validated"
             [class.validateOther]="case.validatedByOther"
             class="square"
 						[ngModel]="case.char" 
