--- a/client/src/app/crosswords/grid/grid.component.css
+++ b/client/src/app/crosswords/grid/grid.component.css
@@ -16,7 +16,8 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	text-transform: uppercase;
+    text-transform: uppercase;
+    background-color: rgba(0,0,0,0);
 }
 .square.selected{
     background-color: #aaa;
@@ -62,6 +63,13 @@
     background-color: yellow;
     /*border-top: solid lightblue 3px;
     border-bottom: solid lightblue 3px;*/
+}
+
+.border{
+    position: absolute;
+    top: 0;
+    left: 0;
+    border: 4px solid red;
 }
 
 .validateOther{
