--- a/client/src/app/crosswords/grid/grid.component.html
+++ b/client/src/app/crosswords/grid/grid.component.html
@@ -1,6 +1,6 @@
 <div>
-  <div class="grid">
-    <div class="row" *ngFor="let row of _gridService.grid;">
+  <div class="grid" >
+    <div class="row" *ngFor="let row of _gridService.grid;" >
       <div class="col" *ngFor="let case of row;">
 					<input 
             [disabled]="case.validated || case.validatedByOther" 
@@ -12,16 +12,22 @@
 						(keyup)="updateGrid($event, case)"
 						maxlength="1" 
           	[class.selected]="case.selected()"
-            [class.is-black]="case.char === '-'"  
+            [class.is-black]="case.char === '-'"
             (click)=selectCaseFromGrid(case)
             [class.other-player] = "case.isOtherPlayer"
             id={{case.id}}
             />
+          <div *ngIf="case.startOfSelected()">
+           <div class="border" style="height: 50px; width: 200px;">
+           </div>
+          </div>
+
 					<div class="indexes">
 						<div class="small-index" *ngFor="let index of case.wordIndexes">
-							{{index}}
+              {{index}}   
 						</div>
-					</div>
+          </div>
+          
       </div>
     </div>
   </div>
