Added stripped cell when valid by both players
stripped in player colors

--- a/client/src/app/crosswords/grid/grid.component.html
+++ b/client/src/app/crosswords/grid/grid.component.html
@@ -6,6 +6,7 @@
             [disabled]="case.validated || case.validatedByOther" 
             [class.validate]="case.validated"
             [class.validateOther]="case.validatedByOther"
+            [class.sharedValidation]= "case.sharedValidation"
             class="square"
 						[ngModel]="case.char" 
 						(keypress)="updateGrid($event, case)" 
