Added stripped cell when valid by both players
stripped in player colors

--- a/client/src/app/crosswords/grid/grid.component.css
+++ b/client/src/app/crosswords/grid/grid.component.css
@@ -67,3 +67,13 @@
 .validateOther{
     background: lightblue; 
 }
+
+.sharedValidation {
+    background: repeating-linear-gradient(
+        45deg,
+        lightblue,
+        lightblue 5px,
+        greenyellow 5px,
+        greenyellow 10px
+      ) !important; 
+}
