--- a/client/src/app/crosswords/grid/grid.component.css
+++ b/client/src/app/crosswords/grid/grid.component.css
@@ -20,7 +20,7 @@
     background-color: rgba(0,0,0,0);
 }
 .square.selected{
-    background-color: #aaa;
+    /* background-color: #aaa; */
 }
 
 .square.is-black {
