--- a/client/src/app/crosswords/grid/grid.component.html
+++ b/client/src/app/crosswords/grid/grid.component.html
@@ -17,7 +17,7 @@
             id={{case.id}}
             />
           <div *ngIf="case.startOfSelected()">
-           <div class="border" style="height: 50px; width: 200px;">
+           <div class="border" [ngStyle]="highligthStyle()">
            </div>
           </div>
 
