--- a/client/src/app/race/track-information/track-information.component.html
+++ b/client/src/app/race/track-information/track-information.component.html
@@ -1,16 +1,19 @@
-
 <input [(ngModel)]="_name" placeholder="name">
 <input [(ngModel)]="_type" placeholder="type">
 <input [(ngModel)]="_description" placeholder="description">
 
-<button (click)="getTracksList()">get tracks</button>
-<button (click)="getTrackInfo()">get track</button>
 <button (click)="putTrack()">save track</button>
-<button (click)="deleteTrack()">delete track</button>
 
+<div *ngIf="_currentTrack">
+  <div><span>name: </span>{{_currentTrack.name}}</div>
+  <div><span>type: </span>{{_currentTrack.type}}</div>
+  <div><span>description: </span>{{_currentTrack.description}}</div>
+  <div><span>times played: </span>{{_currentTrack.timesPlayed}}</div>
+  <button (click)="deleteTrack()">delete track</button>
+</div>
 
+<div>
   <li *ngFor="let track of this._tracks">
-    {{track}}
+    <button (click)="getTrackInfo(track)">{{track}}</button>
   </li>
-
-
+</div>
