--- a/client/src/app/crosswords/grid/grid.component.html
+++ b/client/src/app/crosswords/grid/grid.component.html
@@ -14,18 +14,16 @@
 						maxlength="1" 
             [class.is-black]="case.char === '-'"
             (click)=selectCaseFromGrid(case)
-
             id={{case.id}}
             />
-            <!-- [class.other-player] = "case.isOtherPlayer" -->
-          <div *ngIf="case.startOfSelected()">
-           <div class="border" [ngStyle]="highligthStyle()">
-           </div>
-          </div>
 
-          <div *ngIf="case.startSelectedByOther()">
-              <div class="border" [ngStyle]="highligthStyleOtherPlayer()">
-              </div>
+          <div *ngIf="case.startOfSelected()" 
+                class="border" 
+                [ngStyle]="highligthStyle()">
+          </div>
+          <div *ngIf="case.startSelectedByOther()" 
+                class="border" 
+                [ngStyle]="highligthStyleOtherPlayer()">
           </div>
 
 					<div class="indexes">
