Probleme d'asynchronicite regler. Tests pour trackInfoService (serveur) passant.

--- a/client/src/app/race/track-information/track-information.component.html
+++ b/client/src/app/race/track-information/track-information.component.html
@@ -13,7 +13,7 @@
 </div>
 
 <div>
-  <li *ngFor="let track of this._tracks">
+  <li *ngFor="let track of _tracks">
     <button (click)="getTrackInfo(track)">{{track}}</button>
   </li>
 </div>
