--- a/client/src/app/crosswords/termination/termination.component.css
+++ b/client/src/app/crosswords/termination/termination.component.css
@@ -26,31 +26,8 @@
     padding: 10px;
 }
 
-.players {
-    background-color: #f1f1f1;
-    padding: 20px 30px;
-    border-radius: 6px;
-    margin-bottom: 10px;
-
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.players button {
-    background-color: #ccc;
-}
-
-.players button:hover {
-    background-color: #0099dd;
-}
-
-input {
-    width: 100%;
-    border: 2px solid #ddd;
-    margin: 10px 0;
-    padding: 8px 16px;
-    border-radius: 6px;
+button {
+    margin-top: 20px;
 }
 
 input:focus {
@@ -58,6 +35,6 @@ input:focus {
     border-color: #0099dd;
 }
 
-.disconnected {
+.dialog {
     color: red
 }
