--- a/client/src/app/crosswords/termination/termination.component.dialog.html
+++ b/client/src/app/crosswords/termination/termination.component.dialog.html
@@ -1,50 +1,42 @@
 <div class="waiting-connection">
   <div *ngIf="dialogType() === 0">
-    <h2 class="disconnected">Opponent left the game</h2>
-    <h1>You have won!</h1>
-    <button (click)="openModeDialog()">Play again</button>
+    <h2 class="dialog">Your opponent left the game</h2>
   </div>
 
   <div *ngIf="dialogType() === 1">
-    <h2 class="disconnected">Congratulations!</h2>
+    <h2 class="dialog">Congratulations!</h2>
     <h1>You completed the grid</h1>
-
-    <button (click)="createSoloGame()">Play again</button>
+    <button (click)="createSoloGame()">Play again</button>    
   </div>
 
   <div *ngIf="dialogType() === 2">
-    <h2 class="disconnected">WIN!</h2>
-    <h1>You won the game!</h1>
-    <div *ngIf="!showRematchOffer">
+    <h2 class="dialog">WIN!</h2>
+    <div *ngIf="!showRematchOffer && !showWaitingRematchOffer">
+    <h1>You won the game!</h1>      
     <button (click)="requestRematch()">Ask opponent to play again</button>
     </div>
-    <div *ngIf="showRematchOffer">
-        <h2>Waiting for {{opponentID}} response</h2>
-        <div class="spinner">
-            <mat-spinner color="warn"></mat-spinner>
-        </div>
-    </div>
-    <button (click)="openModeDialog()">Play new game</button>
-
-
   </div>
 
   <div *ngIf="dialogType() === 3">
-    <h2 class="disconnected">You lost...</h2>
-    <div *ngIf="!showRematchOffer">
+    <h2 class="dialog">You lost...</h2>
+    <div *ngIf="!showRematchOffer && !showWaitingRematchOffer">
         <h1>Try again?</h1>        
         <button (click)="requestRematch()">Ask opponent to play again</button>
     </div>
-    <div *ngIf="showRematchOffer">
-        <h1> {{opponentID}} wants to play again</h1>
-        <button (click)="acceptRematchOffer()">Accept</button>
-    </div>
-    <button (click)="openModeDialog()">Play new game</button>
-
   </div>
 
-  
+  <div *ngIf="showRematchOffer">
+      <h1> {{opponentID}} wants to play again</h1>
+      <button (click)="acceptRematchOffer()">Accept</button>
+  </div>
+  <div *ngIf="showWaitingRematchOffer">
+      <h2>Waiting for {{opponentID}} response</h2>
+      <div class="spinner">
+          <mat-spinner color="warn"></mat-spinner>
+      </div>
+  </div>
 
+  <button (click)="openModeDialog()">Play new game</button>
 
   <a routerLink="">
     <button (click)="closeDialog()">Main menu</button>
