--- a/client/src/app/race/track-information/track-information.component.html
+++ b/client/src/app/race/track-information/track-information.component.html
@@ -4,6 +4,7 @@
   <div><span>type: </span>{{_currentTrack.type}}</div>
   <div><span>description: </span>{{_currentTrack.description}}</div>
   <div><span>times played: </span>{{_currentTrack.timesPlayed}}</div>
+  <button (click)="loadTrack()">load track</button>
 </div>
 
 <div>
