/race -> Canvas vide avec liste de pistes, infos, apercus. Il faut choisir une piste et cliquer start pour charger inputs, texture, thirdPersonCamera

--- a/client/src/app/race/game-component/game.component.html
+++ b/client/src/app/race/game-component/game.component.html
@@ -1,13 +1,19 @@
 <div #container>
-    <ul>
-        <li>Speed: {{this.renderService.car.speed.length() * 3.6 | number :'2.2-2'}} km/h</li>
-        <li>Gear: {{this.renderService.car.currentGear + 1}}</li>
-        <li>RPM: {{this.renderService.car.rpm | number:'2.0-0'}}</li>
-    </ul>
+  <ul>
+    <li>Speed: {{this.renderService.car.speed.length() * 3.6 | number :'2.2-2'}} km/h</li>
+    <li>Gear: {{this.renderService.car.currentGear + 1}}</li>
+    <li>RPM: {{this.renderService.car.rpm | number:'2.0-0'}}</li>
+  </ul>
 </div>
 
 <div>
-  <br><br><br><br>
-  <app-track-information></app-track-information>
-</div>
+  <br>
+  <br>
+  <br>
+  <br>
+  <div *ngIf="!_raceStarted">
+    <button (click)="start()">start race</button>
+    <app-track-information></app-track-information>
+  </div>
 
+</div>
