ajout du tableau des meilleurs temps

--- a/client/src/app/race/game-component/game.component.html
+++ b/client/src/app/race/game-component/game.component.html
@@ -26,6 +26,9 @@
       <span>type: </span>{{_trackInformation.track.type}}<br>
       <span>description: </span>{{_trackInformation.track.description}}<br>
       <span>times played: </span>{{_trackInformation.track.timesPlayed}}<br>
+      <li *ngFor="let time of _trackInformation.track.completedTimes">
+        {{time}} seconds
+      </li>
   </div>
 
 </div>
