tests mise en evidence

--- a/client/src/app/crosswords/grid/grid.component.html
+++ b/client/src/app/crosswords/grid/grid.component.html
@@ -19,11 +19,11 @@
 
           <div *ngIf="case.startOfSelected()" 
                 class="border" 
-                [ngStyle]="highligthStyle(false)">
+                [ngStyle]="highlightStyle(false)">
           </div>
           <div *ngIf="case.startSelectedByOther()" 
                 class="border" 
-                [ngStyle]="highligthStyle(true)">
+                [ngStyle]="highlightStyle(true)">
           </div>
 
 					<div class="indexes">
