--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -41,6 +41,12 @@ button:focus {
 	outline: 0px;
 }
 
+-button:hover, button.active {
+    background-color: #0099dd;
+    box-shadow: 0 2px 12px rgba(0,0,0,0.6);
+    color: #fff;
+}
+
 .container {
     max-width: 1200px;
     margin: 0 auto;
