Sync grid between two players

--- a/client/src/app/crosswords/mode/mode.component.mode.html
+++ b/client/src/app/crosswords/mode/mode.component.mode.html
@@ -12,7 +12,7 @@
     </div>
   
     <div class="input-row" [hidden]="!startSoloGame()">
-      <button (click)="closeDialog()">Start Game</button>
+      <button (click)="newGame()">Start Game</button>
     </div>
   
     <div [hidden]="!isMultiPlayer()">
