ajout dun clock qui garde le temps dune course. Ajout dun service de communication entre TrackProgression et GameComponent.

--- a/client/src/app/race/game-component/game.component.html
+++ b/client/src/app/race/game-component/game.component.html
@@ -11,7 +11,7 @@
 <br>
 <br>
 <br>
-
+<span>Time: {{_currentGameTime}} seconds</span>
 <div *ngIf="!_raceStarted">
 
   <button (click)="start()">start race</button>
