ajout hud component

--- a/client/src/app/race/game-component/game.component.html
+++ b/client/src/app/race/game-component/game.component.html
@@ -4,6 +4,7 @@
     <li>Gear: {{this.renderService.car.currentGear + 1}}</li>
     <li>RPM: {{this.renderService.car.rpm | number:'2.0-0'}}</li>
   </ul>
+  <app-hud></app-hud>
 </div>
 
 
