--- a/client/src/app/race/results/results.component.css
+++ b/client/src/app/race/results/results.component.css
@@ -16,7 +16,7 @@
 
 /* Modal Content */
 .modal-content {
-    background-color: lightslategray;
+    background-color: whitesmoke;
     margin: auto;
     padding: 20px;
     border: 1px solid #888;
