--- a/client/src/app/race/hud/hud.component.html
+++ b/client/src/app/race/hud/hud.component.html
@@ -1,3 +1,9 @@
-<p class="color">
-  hud works!
+<p class="lap">
+  Laps:    / 3
 </p>
+
+<div class="time">
+  <p>Total time: {{_currentGame.gameTime}}</p>
+  <p>Lap time:</p>
+</div>
+
