--- a/client/src/app/race/game-component/game.component.html
+++ b/client/src/app/race/game-component/game.component.html
@@ -5,14 +5,11 @@
     <li>RPM: {{this.renderService.car.rpm | number:'2.0-0'}}</li>
   </ul>
 
-  <p class="lap">Lap: {{_currentGame.currentLap - 1}} / 3</p>
+  <p class="lap">Lap: {{_currentGame.currentLap}} / 3</p>
     <p class="time"> Time: {{_currentGame.gameTime}} seconds</p>
     <p class="lap-time"> Lap Time: {{_currentGame.lapTime}} seconds</p>
 
 </div>
-
-
-
 
 <br>
 <br>
