fix pour correction: *minimise accessibilite de validateWord et applyValidation *enleve l'assignation de la couleur dans .ts *enum pour Mode de jeu

--- a/client/src/app/crosswords/grid/grid.component.css
+++ b/client/src/app/crosswords/grid/grid.component.css
@@ -38,6 +38,14 @@
     outline: none;
 }
 
+.selected{
+    border-color: red;
+}
+
+.selected-other{
+    border-color: blue;
+}
+
 .validate {
     background: lightcoral !important;
 }
