--- a/client/src/app/crosswords/grid/grid.component.html
+++ b/client/src/app/crosswords/grid/grid.component.html
@@ -18,11 +18,11 @@
             />
 
           <div *ngIf="cell.startOfSelected()" 
-                class="border" 
+                class="border selected" 
                 [ngStyle]="highlightStyle(false)">
           </div>
           <div *ngIf="cell.startSelectedByOther()" 
-                class="border" 
+                class="border selectedOther" 
                 [ngStyle]="highlightStyle(true)">
           </div>
 
